<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/keepScreenOnButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/keep_screen_on"
        android:scaleType="fitCenter"
        android:src="@drawable/awake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/setWayPointButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/set_waypoint"
        android:scaleType="fitCenter"
        android:src="@drawable/waypoint"
        app:layout_constraintEnd_toEndOf="@+id/keepScreenOnButton"
        app:layout_constraintStart_toStartOf="@+id/keepScreenOnButton"
        app:layout_constraintTop_toBottomOf="@+id/keepScreenOnButton" />

    <com.xxx.speedometer.SpeedometerView
        android:id="@+id/speedometerView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/speedometerView"
        app:layout_constraintEnd_toEndOf="@+id/speedometerView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/speedometerView"
        app:layout_constraintTop_toTopOf="@+id/speedometerView"
        app:layout_constraintVertical_bias="0.496"
        tools:text="120" />

    <ImageView
        android:id="@+id/spinnerImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/animated_spinner"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/speedTextView"
        app:layout_constraintEnd_toEndOf="@+id/speedTextView"
        app:layout_constraintStart_toStartOf="@+id/speedTextView"
        app:layout_constraintTop_toTopOf="@+id/speedTextView"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/topCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/semi_transparent_black"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/speedometerView"
        app:layout_constraintEnd_toStartOf="@+id/keepScreenOnButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/keepScreenOnButton">

        <ViewFlipper
            android:id="@+id/topCardViewFlipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/speedHistogram"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/waypointTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="Waypoint: 40.7128, -74.0060" />

        </ViewFlipper>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/semi_transparent_black"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedometerView"
        app:layout_constraintVertical_bias="0.2">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="16dp"
            android:rowCount="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/gps_signal"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gpsSignalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#FFFFFF"
                tools:text="Strong" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/elevation"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/elevationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#FFFFFF"
                tools:text="123 m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/coordinates"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coordinatesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#FFFFFF"
                tools:text="---, ---" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/satellites"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/satellitesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#FFFFFF"
                tools:text="--- / ---" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/magnetic_field"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/magneticFieldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#FFFFFF"
                tools:text="45.6 μT" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/accuracy"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accuracyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#FFFFFF"
                tools:text="High" />

        </GridLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>